--- a/scss/_whatwedo.scss
+++ b/scss/_whatwedo.scss
@@ -1,8 +1,5 @@
 @import "variables";
 
-.align {
-  padding: 0.34vw;
-}
 #whatwedo {
   width: 100%;
   height: 510px;
